Second Step - i18n, Versioning, HATEOAS

--- a/classes/Section 3/1-restAPI_Project/restful-web-services/pom.xml
+++ b/classes/Section 3/1-restAPI_Project/restful-web-services/pom.xml
@@ -31,7 +31,43 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<!-- !! Added dependency for validating user creation !! -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<!-- !! / !! -->
 
+		<!-- !! Added dependency for generating documentation (OpenAPI/Swagger) -->
+		<!-- UI -->
+		<!--
+	    <dependency>
+	        <groupId>org.springdoc</groupId>
+	        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+	        <version>2.7.0</version>
+	    </dependency>
+		-->
+		
+	    <!-- API -->
+	    <!--
+	    <dependency>
+	        <groupId>org.springdoc</groupId>
+	        <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+	        <version>2.7.0</version>
+	    </dependency>
+	    -->
+		<!-- !! / !! -->
+		
+		<!-- !! Added dependency so we can serialize data using XML !! -->
+		<!--
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+		-->
+		<!-- !! / !! -->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -50,6 +86,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- !! Added dependencies for HATEOAS !! -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
+		<!-- !! / !! -->
+		
 	</dependencies>
 
 	<build>
@@ -60,5 +104,28 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<!-- !! Added dependencies for versioning !! -->
+	<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
+	<!-- !! / !! -->	
 
 </project>
