--- a/classes/Section 3/1-restAPI_Project/restful-web-services/src/main/resources/application.properties
+++ b/classes/Section 3/1-restAPI_Project/restful-web-services/src/main/resources/application.properties
@@ -2,3 +2,13 @@ spring.application.name=restful-web-services
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# actuator endpoint configuration
+management.endpoints.web.exposure.include=*
+
+# enabling h2's methods (local database)
+spring.h2.console.enabled=true
+# setting its url
+spring.datasource.url=jdbc:h2:mem:testdb
+# enabling the usage of data insertion/manipulation
+spring.jpa.defer-datasource-initialization=true
