Forth Step - SQL logging, Post implementation

--- a/classes/Section 3/1-restAPI_Project/restful-web-services/src/main/resources/application.properties
+++ b/classes/Section 3/1-restAPI_Project/restful-web-services/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 # enabling the usage of data insertion/manipulation
 spring.jpa.defer-datasource-initialization=true
+# enabling SQL logging features
+spring.jpa.show-sql=true
