Fifth Step - H2 to MySQL (+ Docker) migration, Spring Security

--- a/classes/Section 3/1-restAPI_Project/restful-web-services/src/main/resources/application.properties
+++ b/classes/Section 3/1-restAPI_Project/restful-web-services/src/main/resources/application.properties
@@ -8,9 +8,27 @@ management.endpoints.web.exposure.include=*
 
 # enabling h2's methods (local database)
 spring.h2.console.enabled=true
-# setting its url
-spring.datasource.url=jdbc:h2:mem:testdb
+# setting its url (H2 <pre-MySQL>)
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+# setting db's path (MySQL)
+spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
+
+# setting default values for MySQL user authentication
+spring.datasource.username=social-media-user
+spring.datasource.password=dummypassword
+# -- / --
+
+# config for Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# -- / --
+
 # enabling the usage of data insertion/manipulation
 spring.jpa.defer-datasource-initialization=true
 # enabling SQL logging features
 spring.jpa.show-sql=true
+
+# customising 'Spring Security' credentials
+spring.security.user.name=username
+spring.security.user.password=password
