--- a/classes/Section 3/1-restAPI_Project/restful-web-services/pom.xml
+++ b/classes/Section 3/1-restAPI_Project/restful-web-services/pom.xml
@@ -21,7 +21,7 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -37,6 +37,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<!-- !! / !! -->
+		
+		<!-- !! Added dependency for security (Spring Security) !! -->
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-security</artifactId>
+	    </dependency>
 		<!-- !! / !! -->
 
 		<!-- !! Added dependency for generating documentation (OpenAPI/Swagger) -->
@@ -75,17 +82,29 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- !! Removing dependency for H2 (now using MySQL)-->
+		<!--
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		-->
+		<!-- !! / !! -->
+		
+		<!-- !! Added dependencies for MySQL !! -->
+		<dependency>
+	    	<groupId>com.mysql</groupId>
+	    	<artifactId>mysql-connector-j</artifactId>
+		</dependency>
+		<!-- !! / !! -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 		
 		<!-- !! Added dependencies for HATEOAS !! -->
 		<dependency>
@@ -140,6 +159,6 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
-	<!-- !! / !! -->	
+	<!-- !! / !! -->	 
 
 </project>
