Seventh (2/4) Step - Migrating CurrencyExchange from hard-coded to H2 db

--- a/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/src/main/resources/application.properties
+++ b/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/src/main/resources/application.properties
@@ -7,3 +7,12 @@ server.port=8000
 
 # pointing the environments to be found in Spring Cloud Server's path
 spring.config.import=optional:configserver:http://localhost:8888
+
+# setting db's path/name
+spring.datasource.url=jdbc:h2:mem:testdb
+# enabling logging features for the db (H2)
+spring.jpa.show-sql=true
+# enabling db's debug messages to show on the console
+spring.h2.console.enabled=true
+# making the data from 'data.sql' be loaded after the db is created
+spring.jpa.defer-datasource-initialization=true
