--- a/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/pom.xml
+++ b/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/pom.xml
@@ -55,6 +55,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- !! Added dependencies for H2/JPA !! -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+		<!-- !! / !! -->
+		
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
