--- a/classes/Section-4/limitsMicroservice_Project/currency-conversion-service/pom.xml
+++ b/classes/Section-4/limitsMicroservice_Project/currency-conversion-service/pom.xml
@@ -43,6 +43,13 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
+		
+		<!-- !! Added dependency for Feign (Microservice Communicator) !! -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<!-- !! / !! -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
