Seventh (5/5) Step - Naming Server (Eureka)

--- a/classes/Section-4/limitsMicroservice_Project/currency-conversion-service/src/main/resources/application.properties
+++ b/classes/Section-4/limitsMicroservice_Project/currency-conversion-service/src/main/resources/application.properties
@@ -8,3 +8,10 @@ server.port=8100
 
 # pointing the environments to be found in Spring Cloud Server's path
 spring.config.import=optional:configserver:http://localhost:8888
+
+# defining the URL for 'Eureka' (optinal, but important)
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+# adding it to 'Eureka's registry
+#eureka.instance.prefer-ip-address=true
+#eureka.instance.hostname=localhost
