--- a/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/src/main/resources/application.properties
+++ b/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/src/main/resources/application.properties
@@ -16,3 +16,13 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 # making the data from 'data.sql' be loaded after the db is created
 spring.jpa.defer-datasource-initialization=true
+
+# defining the URL for 'Eureka' (optinal, but important)
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+# adding it to 'Eureka's registry
+#eureka.instance.prefer-ip-address=true
+#eureka.instance.hostname=localhost
+
+
+
