--- a/classes/Section-4/limitsMicroservice_Project/currency-conversion-service/pom.xml
+++ b/classes/Section-4/limitsMicroservice_Project/currency-conversion-service/pom.xml
@@ -50,6 +50,13 @@
 		    <artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 		<!-- !! / !! -->
+		
+		<!-- !! Added dependency for Eureka ('Naming Server') -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<!-- !! / !! -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
