--- a/classes/Section-4/limitsMicroservice_Project/naming-server/pom.xml
+++ b/classes/Section-4/limitsMicroservice_Project/naming-server/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.microservices</groupId>
-	<artifactId>currency-exchange-service</artifactId>
+	<artifactId>naming-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>currency-exchange-service</name>
-	<description>Exchange rate microservice for currencies</description>
+	<name>naming-server</name>
+	<description>Naming Server for the &apos;Currency&apos; microservices</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -36,20 +36,9 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-config</artifactId>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
-		
-		<!-- !! Added dependency for Eureka ('Naming Server') -->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
-		<!-- !! / !! -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -62,18 +51,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		<!-- !! Added dependencies for H2/JPA !! -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-		</dependency>
-		<!-- !! / !! -->
-		
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
