--- a/classes/Section-4/limitsMicroservice_Project/currency-conversion-service/src/main/resources/application.properties
+++ b/classes/Section-4/limitsMicroservice_Project/currency-conversion-service/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.config.import=optional:configserver:http://localhost:8888
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 # adding it to 'Eureka's registry
-#eureka.instance.prefer-ip-address=true
-#eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
