--- a/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/src/main/resources/application.properties
+++ b/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/src/main/resources/application.properties
@@ -21,8 +21,5 @@ spring.jpa.defer-datasource-initialization=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 # adding it to 'Eureka's registry
-#eureka.instance.prefer-ip-address=true
-#eureka.instance.hostname=localhost
-
-
-
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
