Eleventh Step - Circuit Breaker, Retries and Fallbacks

--- a/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/src/main/resources/application.properties
+++ b/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/src/main/resources/application.properties
@@ -23,3 +23,10 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 # adding it to 'Eureka's registry
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
+
+# adding max number of retries for 'sample-api' ('Circuit Breaker')
+resilience4j.retry.instances.sample-api.maxAttempts=5
+# adding the wait-time between retries
+resilience4j.retry.instances.sample-api.waitDuration=1s
+# making the waiting time between retries longer each new try
+resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
