--- a/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/pom.xml
+++ b/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/pom.xml
@@ -50,6 +50,18 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 		<!-- !! / !! -->
+		
+		<!-- !! Added dependency for Resilience4J ('Circuit Breaker') -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-spring-boot2</artifactId>
+		</dependency>
+		<!-- !! / !! -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
