Twelfth Step - Rate Limiting, Bulkhead

--- a/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/src/main/resources/application.properties
+++ b/classes/Section-4/limitsMicroservice_Project/currency-exchange-service/src/main/resources/application.properties
@@ -30,3 +30,12 @@ resilience4j.retry.instances.sample-api.maxAttempts=5
 resilience4j.retry.instances.sample-api.waitDuration=1s
 # making the waiting time between retries longer each new try
 resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
+
+# configuring a 'Rate Limiter' for the amount of requests that'll be accepted
+resilience4j.ratelimiter.instances.default.limitForPeriod=10s
+# '' for the period of acceptance of said requests
+resilience4j.ratelimiter.instances.default.limitRefreshPeriod=10s
+
+# setting-up a 'Bulkhead'
+resilience4j.bulkhead.instances.default.maxConcurrentCalls=10
+#resilience4j.bulkhead.instances.sample-api.maxConcurrentCalls=10
